	1308 Golden Axe:		NO INFO. Item not implemented...
	13160, 13161 Destroyer:	Can break target's armor when fired at close range.
	-----
	4296 Cramp Card:	Temp Plug: 10z per mob-level on a 3% chance.
	7458 Fortune Horn:	It's a custom name ^^;
	12017 Speed Decreasing Potion: A potion which decreases the moving speed of a character for a duration.
	-----

=========================
07/23
	* Added some new items thanks to Haplo [Playtester]
	* Added Holy Quiver to IG_Quiver [Playtester]
	* Added the skills of the Rachel + Ice Dungeon mobs [Playtester]
	- I made it so that the monsters are safe to use
	- the skills are official, but some skills are missing
	- the stats are only 50% official
	- drops are official, but various are missing
 	* Completed the temporary Rachel + Ice Dungeon mob stats [Playtester]
07/22
	* More Rachel mobs [Playtester]
	* Raised the chance of Holden Card Combo dropping a stem [Playtester]
	* Started to implement the Rachel mobs [Playtester]
07/21
	* Updated Speed/Delay of Juperos mobs [Playtester]
	- all the official Aegis delays we have are implemented now
	* Updated Speed/Delays of Lighthalzen mobs [Playtester]
	* Updated Speed/Delays of Einbech mobs [Playtester]
	* Replaced race numbers with constants RC_(race) in the item_db [Playtester]
	- also changed some success rates of gaining item bonuses
	* Updated Speed/Delays of Louyang and Ayothaya mobs [Playtester]
	* Fixed Lord of Death Card's Status Change chances [Playtester]
	* Added G_ L_ and XMAS_ mobs to the race2 races [Playtester]
	- also added Rotar Zairo to 'Goblins'
	* Fixed Anonymity Request and Erende Ebecee Card [Playtester]
07/20
	* Added a skill_unit_db entry for NJ_HYOUSYOURAKU, thanks to Eus for the
	  data. [Skotlex]
	* Updated Speed/Delays of Niflheim mobs [Playtester]
	* Updated Speed/Delays of Umbala mobs [Playtester]
	* Updated Speed/Delays of Kunlun mobs [Playtester]
	* Updated aDelay of some mobs to Aegis [Playtester]